--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-About
-Current Schedule
-Coursera Information
-Family
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
-COLLEEN VAN LENT
+    About
+<br>
+<h1>Joseph Choi</h1>
+<h2>joschoi@umich.edu</h2>
+<br>
+<br>
+<h3>Images</h3>
+<br>
 
-105 S. STATE ST · SCHOOL OF INFORMATION · OFFICE #3369 · ANN ARBOR, MI 48103 
-COLLEMC @UMICH.EDU
+<a href="imgs/moke_lake.jpg"> Click here for picture </a>
+<img src="imgs/moke_lake.jpg" alt="New Zealand" width="400" height="300"/>
 
-I am a Lecturer IV in the School of Information at the University of Michigan. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).
-
-My previous jobs include Associate Professor at California State University and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from Kent State University Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.
-
-My honors include being chosen as a National Physical Sciences Consortium Fellow and a NASA Faculty Fellow. I have always emphasized the idea of technology for everybody. To that I have worked to create courses for education majors to learn robotics, as well other CS curriculum for non-majors. Her current focus is outreach with elementary and middle school students to learn problem-solving, coding, and design. I have published three recent books for children, "Web Design with HTML" and more "Web Design with HTML" and "Making a Web Page" (co-authored with my son).
+</head>
+<body>
+    
+</body>
+</html>
