--- a/index.html
+++ b/index.html
@@ -2,21 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-
-    About
+    <title>Joseph Choi</title>
 <br>
 <h1>Joseph Choi</h1>
 <h2>joschoi@umich.edu</h2>
 <br>
-<br>
 <h3>Images</h3>
 <br>
 
-<a href="imgs/moke_lake.jpg"> Click here for picture </a>
-<img src="imgs/moke_lake.jpg" alt="New Zealand" width="400" height="300"/>
+<img src="imgs/car.jpg" alt="New Zealand" width="400" height="300"/>
 
 </head>
 <body>
