all images, all pages

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
 
 </head>
 <body>
-    Contact page
+    <h3>Joseph Choi</h3>
+    <h3>joschoi@umich.edu</h3>
+    <h4>Click this link to send me a message</h4>
+    <img src="imgs/portrait.jpg" alt="Portrait" width="200"/>
 </body>
 </html>
