--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Joseph Choi</title>
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="icon" href="imgs/blockm.png">
 </head>
 <body>
         <h1>Joseph Choi</h1>
@@ -14,6 +15,13 @@
         <a href="Projects.html"> Projects </a>
         <a href="Contact.html"> Contact </a>
         
+        
+        <h2>Link to resume</h2>
+        <h2>Links to About, Project, Contact pages:</h2>
+
+        <img src="imgs/email.png" alt="Email" width="50"/>
+        <img src="imgs/propic.jpg" alt="ProfilePic" width="50"/>
+        <img src="imgs/code.jpg" alt="Code" width="50"/>
 
 </body>
 </html>
