--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@
 
 </head>
 <body>
-    Projects page
+    <h2>Michigan Biological Software Team - Protocat.org</h2>
+    <h2>EECS 183 - Artificial Intelligence Tweet Generator</h2>
+    <img src="imgs/protocat.png" alt="Protocat" width="200"/>
 </body>
 </html>
