--- a/samplepics.html
+++ b/samplepics.html
@@ -6,7 +6,7 @@
 
 <h1>9 pictures</h1>
 
-<img src="imgs/portrait.jpg" alt="Portrait" width="400"/>
+<img src="imgs/sunrise.jpg" alt="Sunrise" width="400"/>
 <img src="imgs/car.jpg" alt="New Zealand" width="400"/>
 <img src="imgs/heli.jpg" alt="Heli" width="400"/>
 <img src="imgs/rock.jpg" alt="Rock" width="400"/>
