--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
-    About page
+    I am a second year student in the UofM School of Information. I'm interested in accessible web development and data science!
+    <img src="imgs/umsi.png" alt="UMSI" width="200"/>
 </body>
 </html>
