changed code.png file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <img src="imgs/email.png" alt="Email" width="50"/>
         <img src="imgs/propic.jpg" alt="ProfilePic" width="50"/>
-        <img src="imgs/code.jpg" alt="Code" width="50"/>
+        <img src="imgs/code.png" alt="Code" width="50"/>
 
 </body>
 </html>
