--- a/samplepics.html
+++ b/samplepics.html
@@ -6,15 +6,15 @@
 
 <h1>9 pictures</h1>
 
-<img src="imgs/sunrise.jpg" alt="Sunrise" width="400"/>
-<img src="imgs/car.jpg" alt="New Zealand" width="400"/>
+<img src="imgs/sunrise.JPG" alt="Sunrise" width="400"/>
+<img src="imgs/car.JPG" alt="New Zealand" width="400"/>
 <img src="imgs/heli.jpg" alt="Heli" width="400"/>
 <img src="imgs/rock.jpg" alt="Rock" width="400"/>
-<img src="imgs/water.jpg" alt="Water" width="400"/>
-<img src="imgs/kakadu.jpg" alt="Kakadu" width="400"/>
-<img src="imgs/mtns.jpg" alt="Mtns" width="400"/>
-<img src="imgs/beach.jpg" alt="Beach" width="400"/>
-<img src="imgs/island.jpg" alt="Island" width="400"/>
+<img src="imgs/water.JPG" alt="Water" width="400"/>
+<img src="imgs/kakadu.JPG" alt="Kakadu" width="400"/>
+<img src="imgs/mtns.JPG" alt="Mtns" width="400"/>
+<img src="imgs/beach.JPG" alt="Beach" width="400"/>
+<img src="imgs/island.JPG" alt="Island" width="400"/>
 
 
 </head>
