--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Contact</title>
-
-
 </head>
+
 <body>
-    <h3>Joseph Choi</h3>
-    <h3>joschoi@umich.edu</h3>
-    <h4>Click this link to send me a message</h4>
-    <img src="imgs/portrait.jpg" alt="Portrait" width="200"/>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html"> About </a></li>
+                <li><a href="travel.html"> Travel</a></li>
+                <li><a href="projects.html"> Projects </a></li>
+                <li><a href="contact.html"> Contact </a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Contact</h1>
+        <h3>Joseph Choi</h3>
+        <h3>joschoi@umich.edu</h3>
+        <h3>https://www.linkedin.com/in/joseph-choi-19332a150</h3>
+        <h4>Use this form to send me a message! If you have questions about my projects, or just want to chat, feel
+            free to ask me anything.</h4>
+        <img src="imgs/portrait.jpg" alt="Portrait" width="200" />
+    </main>
+
 </body>
+
 </html>
