--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="about.html"> About </a></li>
+                <li><a href="index.html"> About </a></li>
                 <li><a href="travel.html"> Travel</a></li>
                 <li><a href="projects.html"> Projects </a></li>
                 <li><a href="contact.html"> Contact </a></li>
