added sketches, updated linkedin url

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contact</title>
+    <title>Joseph - Contact</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <h1>Contact</h1>
         <h3>Joseph Choi</h3>
         <h3>joschoi@umich.edu</h3>
-        <h3>https://www.linkedin.com/in/joseph-choi-19332a150</h3>
+        <h3>www.linkedin.com/in/choi-joseph</h3>
         <h4>Use this form to send me a message! If you have questions about my projects, or just want to chat, feel
             free to ask me anything.</h4>
         <img src="imgs/portrait.jpg" alt="Portrait" width="200" />
